# kubevirt

./: WORKSPACE  build.sh  install.sh  kubevirt-usb-device.yaml  uninstall.sh
api/: api-rule-violations-known.list  api-rule-violations.list
api/openapi-spec/: swagger.json
cmd/virt-launcher/: virt-launcher.go
cmd/virt-launcher/node-labeller/: node-labeller.sh
docs/devel/: host-devices-and-device-plugins.md
examples/: vm-alpine-datavolume.yaml  vm-cirros-clarge-virtio.yaml  vm-cirros-clarge-windows.yaml  vm-cirros-clarge.yaml  vm-cirros-cluster-csmall.yaml  vm-cirros-csmall.yaml  vm-cirros-sata.yaml  vm-cirros.yaml  vm-pool-cirros.yaml  vm-priorityclass.yaml  vm-template-fedora.yaml  vmi-alpine-efi.yaml  vmi-arm.yaml  vmi-ephemeral.yaml  vmi-fedora-isolated.yaml  vmi-fedora.yaml  vmi-gpu.yaml  vmi-kernel-boot.yaml  vmi-macvtap.yaml  vmi-masquerade.yaml  vmi-migratable.yaml  vmi-multus-multiple-net.yaml  vmi-multus-ptp.yaml  vmi-nocloud.yaml  vmi-replicaset-cirros.yaml  vmi-sata.yaml  vmi-secureboot.yaml  vmi-slirp.yaml  vmi-sriov.yaml  vmi-with-sidecar-hook.yaml
hack/: bootstrap.sh  rpm-deps.sh
pkg/util/: util.go
pkg/virt-controller/services/: renderresources.go  rendervolumes.go  template.go
pkg/virt-handler/device-manager/: BUILD.bazel  common.go  device_controller.go  display_device.go  mediated_device.go  pci_device.go  (+1 more)
pkg/virt-launcher/virtwrap/device/display/: BUILD.bazel  addresspool.go  displaydev.go
pkg/virt-launcher/virtwrap/device/hostdevice/usb/: BUILD.bazel  addresspool.go  hosdev.go  hostdev.go
rpm/: BUILD.bazel  repo.yaml
(+16 files in other folders)
