load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "addresspool.go",
        "hosdev.go",
    ],
    importpath = "kubevirt.io/kubevirt/pkg/virt-launcher/virtwrap/device/hostdevice/usb",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/virt-launcher/virtwrap/api:go_default_library",
        "//pkg/virt-launcher/virtwrap/device/hostdevice:go_default_library",
        "//staging/src/kubevirt.io/api/core/v1:go_default_library",
    ],
)
